--- a/configuration/node.type.basic_page.yml
+++ b/configuration/node.type.basic_page.yml
@@ -15,7 +15,7 @@ third_party_settings:
 name: 'Basic page'
 type: basic_page
 description: 'Use basic pages for your static content, such as an <b>About</b> or <b>Resources</b> page.'
-help: ''
+help: null
 new_revision: true
 preview_mode: 1
 display_submitted: false
