--- a/configuration/pathauto.pattern.basic_page_rule.yml
+++ b/configuration/pathauto.pattern.basic_page_rule.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: '[node:menu-link:parent:title]/[node:title]'
 selection_criteria:
   8c1d6204-816b-453d-9890-f776d3c6305d:
-    id: entity_bundle:node
+    id: 'entity_bundle:node'
     negate: false
     uuid: 8c1d6204-816b-453d-9890-f776d3c6305d
     context_mapping:
