--- a/configuration/core.extension.yml
+++ b/configuration/core.extension.yml
@@ -10,13 +10,13 @@ module:
   breakpoint: 0
   ckeditor: 0
   ckeditor5: 0
-  ckeditor_codemirror: 0
   comment: 0
   config: 0
   contact: 0
   contextual: 0
   ctools: 0
   datetime: 0
+  dblog: 0
   dynamic_page_cache: 0
   editor: 0
   fakeobjects: 0
