--- a/configuration/filter.format.full_html.yml
+++ b/configuration/filter.format.full_html.yml
@@ -3,14 +3,36 @@ langcode: en
 status: true
 dependencies:
   module:
+    - blazy
     - editor
-    - media
+    - slick
 _core:
   default_config_hash: jnh1eKuJM-Ej3qFFEKflhjUa038I1hqGvaHNpTUatQw
 name: 'Full HTML'
 format: full_html
 weight: -10
 filters:
+  blazy_filter:
+    id: blazy_filter
+    provider: blazy
+    status: false
+    weight: 3
+    settings:
+      media_switch: ''
+      hybrid_style: ''
+      box_style: ''
+      box_media_style: ''
+      box_caption: ''
+      filter_tags:
+        img: img
+        iframe: iframe
+      use_data_uri: '0'
+  editor_file_reference:
+    id: editor_file_reference
+    provider: editor
+    status: true
+    weight: 11
+    settings: {  }
   filter_align:
     id: filter_align
     provider: filter
@@ -23,19 +45,13 @@ filters:
     status: true
     weight: 9
     settings: {  }
-  editor_file_reference:
-    id: editor_file_reference
-    provider: editor
-    status: true
-    weight: 11
-    settings: {  }
   filter_html:
     id: filter_html
     provider: filter
     status: true
     weight: -10
     settings:
-      allowed_html: '<a class data-entity-type data-entity-uuid href hreflang id name> <em> <strong> <u> <cite> <blockquote cite class> <code> <ul class type> <ol class start type> <li class> <dl class> <dt class> <dd class> <h2 class id> <h3 class id> <h4 class id> <h5 class id> <h6 class id> <s> <sup> <sub> <img class src alt data-entity-type data-entity-uuid data-align data-caption> <table class> <caption class> <tbody> <thead> <tfoot> <th class> <td class> <tr> <hr> <p class id> <pre> <small class> <div class id> <span class> <br>'
+      allowed_html: '<br> <p class="biblio text-align-left text-align-center text-align-right text-align-justify"> <h2 class="text-align-left text-align-center text-align-right text-align-justify"> <h3 class="text-align-left text-align-center text-align-right text-align-justify"> <h4 class="text-align-left text-align-center text-align-right text-align-justify"> <h5 class="text-align-left text-align-center text-align-right text-align-justify"> <h6 class="text-align-left text-align-center text-align-right text-align-justify"> <span class="ml-3 ml-5 indent-lg subtitle"> <li class="list-item-compact"> <ol class="list-lower-alpha list-lower-roman" start> <ul class="list-no-bullets"> <strong> <em> <sup> <blockquote> <hr> <table> <tr> <td rowspan colspan> <th rowspan colspan> <thead> <tbody> <tfoot> <caption>'
       filter_html_help: true
       filter_html_nofollow: false
   slick_filter:
@@ -44,5 +60,40 @@ filters:
     status: false
     weight: 4
     settings:
+      caption:
+        alt: '0'
+        title: '0'
       optionset: default
+      layout: ''
+      background: false
+      box_caption: ''
+      box_caption_custom: ''
+      box_media_style: ''
+      loading: ''
+      box_style: ''
+      image_style: ''
       media_switch: ''
+      ratio: ''
+      thumbnail_style: ''
+      grid: ''
+      grid_medium: ''
+      grid_small: ''
+      style: ''
+      skin: ''
+      overridables:
+        arrows: '0'
+        autoplay: '0'
+        dots: '0'
+        draggable: '0'
+        infinite: '0'
+        mouseWheel: '0'
+        randomize: '0'
+        variableWidth: '0'
+      optionset_thumbnail: ''
+      skin_thumbnail: ''
+      thumbnail_caption: ''
+      thumbnail_effect: ''
+      thumbnail_position: ''
+      override: false
+      preserve_keys: false
+      visible_items: null
