--- a/configuration/node.type.module_page.yml
+++ b/configuration/node.type.module_page.yml
@@ -14,8 +14,8 @@ third_party_settings:
     title_help: ''
 name: 'Module page'
 type: module_page
-description: 'Use module pages for your literary period or cluster''s <b>Background and Context</b> page.'
-help: ''
+description: "Use module pages for your literary period or cluster's <b>Background and Context</b> page."
+help: null
 new_revision: true
 preview_mode: 1
 display_submitted: false
