--- a/configuration/pathauto.pattern.authors_page_rule.yml
+++ b/configuration/pathauto.pattern.authors_page_rule.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: 'resources/authors/[node:title]'
 selection_criteria:
   8633eea1-49ee-47ee-ae30-f093fb089c7a:
-    id: entity_bundle:node
+    id: 'entity_bundle:node'
     negate: false
     uuid: 8633eea1-49ee-47ee-ae30-f093fb089c7a
     context_mapping:
