--- a/configuration/search_api.index.resources_nblce_lib_unb_ca.yml
+++ b/configuration/search_api.index.resources_nblce_lib_unb_ca.yml
@@ -85,7 +85,7 @@ field_settings:
     datasource_id: 'entity:node'
     property_path: title
     type: text
-    boost: !!float 13
+    boost: 13.0
     dependencies:
       module:
         - node
