--- a/configuration/user.role.anonymous.yml
+++ b/configuration/user.role.anonymous.yml
@@ -1,7 +1,11 @@
 uuid: 4a40ab41-d8f2-4a16-ab50-9e95491d528d
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - media
+    - samlauth
+    - system
 _core:
   default_config_hash: j5zLMOdJBqC0bMvSdth5UebkprJB8g_2FXHqhfpJzow
 id: anonymous
