--- a/configuration/user.role.authenticated.yml
+++ b/configuration/user.role.authenticated.yml
@@ -1,7 +1,14 @@
 uuid: 031dabd7-967a-49cf-8850-b4cd21c30eab
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  config:
+    - filter.format.full_html
+  module:
+    - filter
+    - google_analytics
+    - media
+    - system
 _core:
   default_config_hash: dJ0L2DNSj5q6XVZAGsuVDpJTh5UeYkIPwKrUOOpr8YI
 id: authenticated
