--- a/configuration/blazy.settings.yml
+++ b/configuration/blazy.settings.yml
@@ -5,7 +5,6 @@ fx: ''
 noscript: false
 one_pixel: true
 placeholder: ''
-responsive_image: false
 blazy:
   loadInvisible: false
   offset: 100
@@ -19,3 +18,4 @@ io:
   disconnect: false
   enabled: false
 extras: {  }
+max_region_count: 0
