--- a/configuration/editor.editor.full_html.yml
+++ b/configuration/editor.editor.full_html.yml
@@ -17,6 +17,7 @@ settings:
       - italic
       - superscript
       - '|'
+      - link
       - bulletedList
       - numberedList
       - outdent
@@ -54,6 +55,8 @@ settings:
     ckeditor5_sourceEditing:
       allowed_tags:
         - '<span>'
+        - '<h2 id>'
+        - '<h3 id>'
     ckeditor5_style:
       styles:
         -
@@ -83,5 +86,12 @@ settings:
         -
           label: 'List unbulleted'
           element: '<ul class="list-no-bullets">'
+    editor_advanced_link_link:
+      enabled_attributes:
+        - aria-label
+        - class
+        - id
+        - rel
+        - target
 image_upload:
   status: false
