NBLCE-112 Restore CkEditor Full-screen toolbar button

--- a/configuration/editor.editor.full_html.yml
+++ b/configuration/editor.editor.full_html.yml
@@ -33,6 +33,7 @@ settings:
       - style
       - '|'
       - sourceEditing
+      - fullScreen
   plugins:
     ckeditor5_alignment:
       enabled_alignments:
