--- a/configuration/core.extension.yml
+++ b/configuration/core.extension.yml
@@ -8,6 +8,7 @@ module:
   block_content: 0
   breakpoint: 0
   ckeditor5: 0
+  ckeditor5_premium_features_fullscreen: 0
   comment: 0
   config: 0
   contact: 0
